# btgsolutions-dataservices-python-client

./: CHANGELOG.rst  README.md  setup.py
btgsolutions_dataservices/: __init__.py  config.py
btgsolutions_dataservices/rest/: __init__.py  alternative_data_catalog.py  alternative_data_companies.py  alternative_data_funds.py  alternative_data_macro_markets.py  alternative_data_metadata.py  alternative_data_ownership.py  alternative_data_people.py  authenticator.py  book_scope.py  broker_analytics.py  broker_reference.py  bulk_data.py  dataservices_catalog.py  hfn.py  hfn_v3.py  historical_candles.py  historical_candles_crypto.py  intraday_candles.py  public_sources.py  quotes.py  reference_data.py  ticker_last_event.py  ticker_last_event_polling.py
btgsolutions_dataservices/websocket/: __init__.py  broker_analytics.py  hfn_v3_websocket_client.py  hfn_websocket_client.py
docs/: btgsolutions_dataservices.rest.rst  btgsolutions_dataservices.websocket.rst
examples/: ret_stock_loan.ipynb
examples/rust_ws_client/: Cargo.toml  README.md  config.toml
examples/rust_ws_client/src/: main.rs
