[package]
name = "rust_ws_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
anyhow = "1.0"
url = "2.5"
futures = "0.3"
toml = "0.8"
